--- a/src/utilities/scss/partials/_colors.scss
+++ b/src/utilities/scss/partials/_colors.scss
@@ -1,17 +1,17 @@
-// Webpack Color Scheme
+// Color Scheme
 
 $colors: (
-	regent: #8a929d,
-	lynch: #617693,
-	chambray: #31517e,
-	chatham: #12396e,
-	parchment: #efe3d0,
-	calico: #dfc08b,
-	tussock: #c0903f,
-	white: #ffffff,
-	concrete: #f2f2f2,
-	alto: #dedede,
-	dusty-grey: #999999,
-	dove-grey: #666666,
-	mine-shaft: #333333
+    regent: #8a929d,
+    lynch: #617693,
+    chambray: #31517e,
+    chatham: #12396e,
+    parchment: #efe3d0,
+    calico: #dfc08b,
+    tussock: #c0903f,
+    white: #ffffff,
+    concrete: #f2f2f2,
+    alto: #dedede,
+    dusty-grey: #999999,
+    dove-grey: #666666,
+    mine-shaft: #333333
 );
