--- a/src/components/banner/banner-style.scss
+++ b/src/components/banner/banner-style.scss
@@ -1,13 +1,32 @@
 // Styling for the Banner component
 
 @import 'utilities/scss/partials/colors';
+@import 'utilities/scss/partials/screens';
+@import 'utilities/scss/partials/functions';
 
 .banner {
-	min-width: 1280px;
-	background: map-get($colors, mine-shaft);
+    min-width:map-get($screens, desktop);
+    background: map-get($colors, mine-shaft);
 
-	&-inner {
-		padding:0.5em 1em;
-		box-sizing:border-box;
-	}
+    &-inner {
+        padding:0.5em 1em;
+        box-sizing:border-box;
+    }
+
+    &-nav {
+        float:right;
+        padding:0.25em 0;
+
+        &-link {
+            font-size:getFontSize(-2);
+            margin-left:2.5em;
+            text-transform:uppercase;
+            text-decoration:none;
+            color:map-get($colors, alto);
+            transition:color 250ms;
+
+            &:hover,
+            &.-active { color:map-get($colors, white); }
+        }
+    }
 }
