--- a/src/components/container/container-style.scss
+++ b/src/components/container/container-style.scss
@@ -1,6 +1,8 @@
 // Styling for the Container component
 
+@import 'utilities/scss/partials/screens';
+
 .container {
-	width: 1280px;
-	margin: 0 auto;
+    width:map-get($screens, desktop);
+    margin:0 auto;
 }
