--- a/src/components/icon/icon-style.scss
+++ b/src/components/icon/icon-style.scss
@@ -3,81 +3,80 @@
 @import 'utilities/scss/partials/colors';
 
 .icon { 
-  position:relative;
-  display:inline-block;
-  transform-style:preserve-3d;
-  transform:rotateX(-33.5deg) rotateY(45deg);
-  
-  &-cube {
+    position:relative;
     display:inline-block;
     transform-style:preserve-3d;
-    transition:transform 750ms;
-    
-    &.-inner { 
-      position:absolute;
-      top:0; left:0;
-    }
+    transform:rotateX(-33.5deg) rotateY(45deg);
 
-    &-face {
-      position:absolute;
-      width:100%;
-      height:100%;
-      backface-visibility:hidden;
-      background:radial-gradient(transparent 30%,rgba(5,17,53,.2) 100%);
-      
-      &:after {
-        content:'';
-        position:absolute;
-        display:block;
-        width:100%;
-        height:100%;
-        backface-visibility:hidden;
-        transition:background 750ms;
-      }
-    }
-  }
-    
-  // Default Theme
-  &.-default {
-    .icon-cube.-outer .icon-cube-face:after { 
-      background:rgba(126, 169, 232, .5);
-    }
+    &-cube {
+        display:inline-block;
+        transform-style:preserve-3d;
+        transition:transform 750ms;
 
-    .icon-cube.-inner .icon-cube-face:after { 
-      background:rgba(16, 58, 177, .4);
-    }
+        &.-inner { 
+            position:absolute;
+            top:0;
+            left:0;
+        }
 
-    &:hover { 
-      .icon-cube.-outer .icon-cube-face:after { 
-        background:transparentize(#333333, 0.8); 
-      }
+        &-face {
+            position:absolute;
+            width:100%;
+            height:100%;
+            backface-visibility:hidden;
+            background:radial-gradient(transparent 30%,rgba(5,17,53,.2) 100%);
 
-      .icon-cube.-inner .icon-cube-face:after { 
-        background:transparentize(#f39c12, 0.4); 
-      }
-    }
-  }
-  
-  // Light Theme
-  &.-light {
-    .icon-cube.-outer .icon-cube-face:after { 
-      background:transparentize(map-get($colors, concrete), 0.8);
-    }
-
-    .icon-cube.-inner .icon-cube-face:after { 
-      background:transparentize(map-get($colors, tussock), 0.4);
+            &:after {
+                content:'';
+                position:absolute;
+                display:block;
+                width:100%;
+                height:100%;
+                backface-visibility:hidden;
+                transition:background 750ms;
+            }
+        }
     }
     
-    &:hover {
-      .icon-cube.-outer .icon-cube-face:after { 
-        background:transparentize(map-get($colors, white), 0.8); 
-      }
+    &.-default {
+        .icon-cube.-outer .icon-cube-face:after { 
+            background:rgba(126, 169, 232, .5);
+        }
 
-      .icon-cube.-inner .icon-cube-face:after { 
-        background:transparentize(map-get($colors, lynch), 0.6);
-      }
+        .icon-cube.-inner .icon-cube-face:after { 
+            background:rgba(16, 58, 177, .4);
+        }
+
+        &:hover { 
+            .icon-cube.-outer .icon-cube-face:after { 
+                background:transparentize(#333333, 0.8); 
+            }
+
+            .icon-cube.-inner .icon-cube-face:after { 
+                background:transparentize(#f39c12, 0.4); 
+            }
+        }
     }
-  }
+
+    &.-light {
+        .icon-cube.-outer .icon-cube-face:after { 
+            background:transparentize(map-get($colors, concrete), 0.8);
+        }
+
+        .icon-cube.-inner .icon-cube-face:after { 
+            background:transparentize(map-get($colors, tussock), 0.4);
+        }
+
+        &:hover {
+            .icon-cube.-outer .icon-cube-face:after { 
+                background:transparentize(map-get($colors, white), 0.8); 
+            }
+
+            .icon-cube.-inner .icon-cube-face:after { 
+                background:transparentize(map-get($colors, lynch), 0.6);
+            }
+        }
+    }
 }
 
 
