--- a/src/components/logo/logo-style.scss
+++ b/src/components/logo/logo-style.scss
@@ -4,21 +4,21 @@
 @import 'utilities/scss/partials/colors';
 
 .logo {
-	cursor:pointer;
+    cursor:pointer;
 
-	&-text {
-		font-size:1.3em;
-		font-family:'Averia Sans Libre';
-		margin-left:0.25em;
-		vertical-align:text-bottom;
-		transition:color 250ms;
+    &-text {
+        font-size:1.3em;
+        font-family:'Averia Sans Libre';
+        margin-left:0.25em;
+        vertical-align:text-bottom;
+        transition:color 250ms;
 
-		&.-dark { color:map-get($colors, dove-grey); }
-		&.-light { color:map-get($colors, concrete); }
-	}
+        &.-dark { color:map-get($colors, dove-grey); }
+        &.-light { color:map-get($colors, concrete); }
+    }
 
-	&:hover .logo-text {
-		&.-dark { color:map-get($colors, mine-shaft); }
-		&.-light { color:map-get($colors, white); }
-	}
+    &:hover .logo-text {
+        &.-dark { color:map-get($colors, mine-shaft); }
+        &.-light { color:map-get($colors, parchment); }
+    }
 }
