Renaming the Icon's "default" theme to "dark"

--- a/src/components/icon/icon-style.scss
+++ b/src/components/icon/icon-style.scss
@@ -38,7 +38,7 @@
         }
     }
     
-    &.-default {
+    &.-dark {
         .icon-cube.-outer .icon-cube-face:after { 
             background:rgba(126, 169, 232, .5);
         }
