Adding SplashHeader to splash and clearing temporary styles

--- a/src/components/splash/splash-style.scss
+++ b/src/components/splash/splash-style.scss
@@ -1,10 +1,5 @@
-// Styling for the Splash component (temporary)
+// Styling for the Splash component
 
 .splash {
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:92vh;
-
-    span { text-transform:uppercase; color: #999; }
+    
 }
