Updating the Banner with an option for absolute positioning

--- a/src/components/banner/banner-style.scss
+++ b/src/components/banner/banner-style.scss
@@ -35,6 +35,12 @@
         }
     }
 
+    &.-absolute { 
+        position:absolute; 
+        width:100%;
+        top:0;
+    }
+
     &.-light { 
         background: transparent; 
 
