--- a/src/components/frame/frame-style.scss
+++ b/src/components/frame/frame-style.scss
@@ -1,7 +1,9 @@
 // Styling for the Splash component
 
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,600,700,400italic);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300,300italic,600;Averia+Sans+Libre:400,300;Ubuntu+Mono:400,400italic);
+@import 'utilities/scss/partials/colors';
 
 .frame {
     font:300 16px/1 'Open Sans', 'Century Gothic', sans-serif;
+    color:map-get($colors, dove-grey);
 }
