Updating the SplashVisual component with the SplashNodes and arrow

--- a/src/components/splash-visual/splash-visual-style.scss
+++ b/src/components/splash-visual/splash-visual-style.scss
@@ -1,5 +1,34 @@
 // Styling for the SplashVisual component
 
 .splash-visual {
-    height:10em;
+    display:flex;
+    align-content:stretch;
+
+    &-modules,
+    &-transformation,
+    &-output { 
+        display:flex;
+        flex:0 0 33.333%;
+    }
+
+    &-modules { 
+        align-content:stretch;
+
+        &-column {
+            display:flex;
+            flex:1 1 auto;
+            flex-direction:column;
+            justify-content:center;
+            align-items:center;
+
+            .splash-node:not(:last-child) { margin-bottom:1em; }
+        }
+    }
+
+    &-transformation { 
+        background:url(./arrow.png) no-repeat center center; 
+        background-size:50% auto;
+    }
+
+    &-output { background:white; }
 }
