Port the remaining to a simpler styling scheme
* Still SCSS, just less components and easier imports.
* Added footer to `Body`.

--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 @import "components/container";
+@import "components/footer";
 @import "components/icon";
 @import "components/logo";
 @import "components/navigation";
