Add centering to section content and improve header margin a notch

--- a/styles/components/_navigation.scss
+++ b/styles/components/_navigation.scss
@@ -15,6 +15,7 @@
     &-nav {
         float:right;
         padding:0.25em 0;
+        margin-right:2.5em;
 
         &-link {
             font-size:getFontSize(-2);
