Add better styling for blockquotes, tips, and warnings

--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+@import "components/blockquote";
 @import "components/container";
 @import "components/footer";
 @import "components/icon";
