--- a/styles/components/_logo.scss
+++ b/styles/components/_logo.scss
@@ -1,19 +1,19 @@
 .logo {
-    cursor:pointer;
+  display:inline-block;
 
-    &-text {
-        font-size:1.3em;
-        font-family:'Averia Sans Libre';
-        margin-left:0.25em;
-        vertical-align:text-bottom;
-        transition:color 250ms;
+  &-text {
+    font-size:1.3em;
+    font-family:'Averia Sans Libre';
+    margin-left:0.25em;
+    vertical-align:bottom;
+    transition:color 250ms;
 
-        &.-dark { color:map-get($colors, dove-grey); }
-        &.-light { color:map-get($colors, concrete); }
-    }
+    &.-dark { color:map-get($colors, dove-grey); }
+    &.-light { color:map-get($colors, concrete); }
+  }
 
-    &:hover .logo-text {
-        &.-dark { color:map-get($colors, mine-shaft); }
-        &.-light { color:map-get($colors, parchment); }
-    }
+  &:hover .logo-text {
+    &.-dark { color:map-get($colors, mine-shaft); }
+    &.-light { color:map-get($colors, parchment); }
+  }
 }
