--- a/styles/components/_logo.scss
+++ b/styles/components/_logo.scss
@@ -1,11 +1,13 @@
 .logo {
   display:inline-block;
 
+  .icon { vertical-align:top; }
+
   &-text {
     font-size:1.3em;
     font-family:'Averia Sans Libre';
     margin-left:0.25em;
-    vertical-align:bottom;
+    line-height:1.4;
     transition:color 250ms;
 
     &.-dark { color:map-get($colors, dove-grey); }
