--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -6,4 +6,5 @@
 @import "components/icon";
 @import "components/logo";
 @import "components/navigation";
-
+@import "components/page";
+@import "components/sidebar";
