--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -7,7 +7,8 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,600,700,400italic);
 
 body {
-    font:300 16px/1 'Open Sans', 'Century Gothic', sans-serif;
+  font:300 16px/1 'Open Sans', 'Century Gothic', sans-serif;
+  background:map-get($colors, concrete);
 }
 
 ol, ul, p, pre {
@@ -19,24 +20,20 @@ ol, ul, p, pre {
   display: none;
   margin-left: 0.25em;
 }
+
 .header:active .header-anchor-select,
 .header:hover .header-anchor-select {
   display: inline;
 }
 
-.section-index__wrapper, .section-page__wrapper {
-  padding : 2em;
-  max-width: 800px;
-  margin: 0 auto;
+.section-page {
+  padding: 1em;
 }
 
 .previous-page, .next-page {
   top: calc(50%);
   position: fixed;
 }
-.previous-page {
-  left: 1em;
-}
-.next-page {
-  right: 1em;
-}
+
+.previous-page { left: 1em; }
+.next-page { right: 1em; }
