--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -3,16 +3,42 @@
 @import "vars";
 @import "styles";
 
+@import url(https://fonts.googleapis.com/css?family=Droid+Sans+Mono);
 @import url(https://fonts.googleapis.com/css?family=Averia+Sans+Libre:400,300);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,600,700,400italic);
 
 body {
-    font:300 16px/1 'Open Sans', 'Century Gothic', sans-serif;
+  font: 300 16px/1.2 'Open Sans', 'Century Gothic', sans-serif;
 }
 
 ol, ul, p, pre {
   margin-top: 1em;
   margin-bottom: 1em;
+}
+
+h1 {
+  font-size: 200%;
+}
+
+h2 {
+  font-size: 170%;
+}
+
+h3 {
+  font-size: 150%;
+}
+
+h4 {
+  font-size: 130%;
+}
+
+code {
+  font-family: 'Droid Sans Mono', monospace;
+  font-weight: 400;
+}
+
+pre {
+  font: 400 16px/1.4 'Droid Sans Mono', monospace;
 }
 
 .header-anchor-select {
