Updating the index stylesheet's header

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,8 +1,8 @@
 /**
- * Styles
+ * Styling
  *
  * This file contains or imports all styling for the site.
- * The styles defined in this file are loosely based on https://gist.github.com/tuzz/3331384.
+ * Markdown styling is based on https://gist.github.com/tuzz/3331384.
  * Component stylesheets are imported last so as to override anything specified here.
  *
  */
