Trying to restyle the Navigation component when on the root page ('/')

--- a/styles/components/_navigation.scss
+++ b/styles/components/_navigation.scss
@@ -24,13 +24,23 @@
       color:map-get($colors, alto);
 
       &:hover,
-      &.-active { color:map-get($colors, white); }
+      &.-active { 
+        color:map-get($colors, white); 
+      }
     }
   }
 
-  &.-light {
+  &.-splash { 
+    position:absolute; 
+    width:100%;
+    top:0;
+    z-index:5;
     background: transparent;
 
-    .navigation-nav-link:hover { color:map-get($colors, mine-shaft); }
+    .navigation-nav-link {
+      color:map-get($colors, dusty-grey);
+
+      &:hover { color:map-get($colors, mine-shaft); }
+    }
   }
 }
