--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -7,15 +7,21 @@
     padding:0.3em 1em;
     box-sizing:border-box;
 
-    &-middle { flex:0 0 auto; }
-
     &-left,
     &-right { 
       flex:1 1 auto; 
       padding:0.45em 0;
     }
 
-    &-right { text-align:right; }
+    &-middle { 
+      flex:0 0 auto; 
+
+      .webpack-icon { margin-top:2px; }
+    }
+
+    &-right { 
+      text-align:right; 
+    }
 
     &-link {
       font-size:getFontSize(-2);
