docs(concepts): added new target section, still WIP

--- a/styles/components/_blockquote.scss
+++ b/styles/components/_blockquote.scss
@@ -9,7 +9,10 @@ blockquote {
   font-size: 80%;
   border-radius: 7px;
 
-  code { color: black; }
+  code { 
+    color: black;
+  }
+
   p { margin: 0; }
 
   &.tip,
