--- a/styles/components/_sidebar.scss
+++ b/styles/components/_sidebar.scss
@@ -1,19 +1,52 @@
 .sidebar {
-  padding:1em;
+  padding:1.5em;
   background:transparentize(map-get($colors, white), 0.5);
 
-  &-link {
+  &-page {
+    font-size:getFontSize(-1);
     margin-bottom:0.5em;
 
-    &-text {
-      font-size:getFontSize(-1);
-      font-weight:400;
-      text-transform:uppercase;
-      text-decoration:none;
-      color:map-get($colors, dusty-grey);
-      transition:color 250ms;
+    a, i { transition:color 250ms; }
 
-      &:hover { color:map-get($colors, mine-shaft); }
+    &-title {
+      a {
+        font-weight:400;
+        text-transform:uppercase;
+        text-decoration:none;
+        color:map-get($colors, emperor);
+
+        &:hover { color:map-get($colors, tussock); }
+      }
+
+      i {
+        float:right;
+        line-height:1.5;
+        cursor:pointer;
+        color:map-get($colors, dusty-grey);
+
+        &:hover { color:map-get($colors, mine-shaft); }
+      }
+    }
+
+    &-sections {
+      list-style:none;
+      padding-left:0.5em;
+      margin-top:0.2em;
+    }
+
+    &-section { 
+      margin:0;
+
+      a {
+        display:inline-block;
+        max-width:100%;
+        overflow:hidden;
+        white-space:nowrap;
+        text-overflow:ellipsis;
+        color:map-get($colors, dusty-grey);
+
+        &:hover { color:map-get($colors, mine-shaft); }
+      }
     }
   }
 }
