Updating the base font color

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -16,7 +16,7 @@
 
 body {
   font:300 getFontSize(0) 'Open Sans', 'Century Gothic', sans-serif;
-  color:map-get($colors, mine-shaft);
+  color:map-get($colors, emperor);
   background:map-get($colors, concrete);
 }
 
