Tweaking horizontal rule styling...
Basically using it as a <br> for the time being.
We can switch this to a padded line down the road if need be.

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -61,9 +61,8 @@ li {
 }
 
 hr {
-  background: transparent url("http://tinyurl.com/bq5kskr") repeat-x 0 0;
-  color: map-get($colors, alto);
-  height: 4px;
+  height: 0.5em;
+  border:0;
 }
 
 ul, ol {
