--- a/styles/index.scss
+++ b/styles/index.scss
@@ -60,9 +60,10 @@ li {
   margin:0.5em 0;
 }
 
-hr {
-  height: 0.5em;
+hr { // TODO: Revisit this
+  padding:0.5em 0;
   border:0;
+  margin:0;
 }
 
 ul, ol {
