--- a/styles/components/_sidebar.scss
+++ b/styles/components/_sidebar.scss
@@ -19,6 +19,7 @@
       }
 
       i {
+        display:none; // Temporary
         float:right;
         line-height:1.5;
         cursor:pointer;
@@ -29,9 +30,10 @@
     }
 
     &-sections {
+      display:none; // Temporary
       list-style:none;
-      padding-left:0.5em;
-      margin-top:0.25em;
+      padding:0;
+      margin:0.25em 0 1em;
     }
 
     &-section { 
