Moving markdown styling into a separate file and name-spacing it under .page-content

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -20,22 +20,6 @@ body {
   background:map-get($colors, concrete);
 }
 
-h1 { font-size: getFontSize(4); }
-h2 { font-size: getFontSize(3); }
-h3 { font-size: getFontSize(2); }
-h4 { font-size: getFontSize(1); }
-h5 { font-size: getFontSize(0); }
-h6 { font-size: getFontSize(-1); }
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight:400;
-  margin:0.5em 0;
-  text-transform: capitalize;
-
-  &:first-child { margin-top:0; }
-  tt, code { font-size:inherit; }
-}
-
 a {
   color:map-get($colors, tussock);
   text-decoration:none;
@@ -48,133 +32,5 @@ a {
   }
 }
 
-p, blockquote, table, pre {
-  margin:1em 0;
-}
-
-ul, ol, dl {
-  margin:0.5em 0 1em;
-}
-
-li {
-  margin:0.5em 0;
-}
-
-hr {
-  background: transparent url("http://tinyurl.com/bq5kskr") repeat-x 0 0;
-  color: map-get($colors, alto);
-  height: 4px;
-}
-
-ul, ol {
-  padding-left: 30px;
-
-  &:first-child { margin-top:0; }
-  &:last-child { margin-bottom:0; }
-}
-
-dl {
-  dt {
-    font-size: getFontSize(0);
-    font-weight: bold;
-    font-style: italic;
-    margin: 15px 0 5px;
-
-    &:first-child { padding: 0; }
-  }
-
-  dd {
-    margin: 0 0 15px;
-    padding: 0 15px;
-  }
-
-  dt, dd {
-    > :first-child { margin-top: 0; }
-    > :last-child { margin-bottom: 0; }
-  }
-}
-
-blockquote {
-  border-left: 4px solid #dddddd;
-  padding: 0 15px;
-  color: #777777;
-
-  > :first-child { margin-top: 0; }
-  > :last-child { margin-bottom: 0; }
-}
-
-table {
-  padding: 0;
-
-  tr {
-    border-top: 1px solid #cccccc;
-    background-color: white;
-    margin: 0;
-    padding: 0;
-
-    &:nth-child(2n) { background-color: #f8f8f8; }
-
-    th {
-      font-weight: bold;
-      border: 1px solid #cccccc;
-      text-align: left;
-      margin: 0;
-      padding: 6px 13px;
-    }
-
-    td {
-      border: 1px solid #cccccc;
-      text-align: left;
-      margin: 0;
-      padding: 6px 13px;
-    }
-
-    th, td {
-      > :first-child { margin-top: 0; }
-      > :last-child { margin-bottom: 0; }
-    }
-  }
-}
-
-img {
-  max-width: 100%;
-}
-
-b, strong {
-  font-weight:600;
-}
-
-code, tt {
-  font-family:'Ubuntu Mono', monospace;
-  margin: 0 2px;
-  padding: 0 5px;
-  white-space: nowrap;
-  border: 1px solid #eaeaea;
-  background-color: #f8f8f8;
-  border-radius: 3px;
-}
-
-pre {
-  background-color: #f8f8f8;
-  border: 1px solid #cccccc;
-  font-size: 13px;
-  line-height: 19px;
-  overflow: auto;
-  padding: 6px 10px;
-  border-radius: 3px;
-
-  code {
-    margin: 0;
-    padding: 0;
-    white-space: pre;
-    border: none;
-    background: transparent;
-  }
-
-  code, tt {
-    background-color: transparent;
-    border: none;
-  }
-}
-
+@import "markdown";
 @import "styles";
