--- a/styles/components/_logo.scss
+++ b/styles/components/_logo.scss
@@ -1,20 +1,20 @@
 .logo {
+  position:relative;
   display:inline-block;
-
-  .icon,
-  &-text { 
-    vertical-align:top; 
-  }
 
   &-text {
     font-size:1.3em;
     font-family:'Averia Sans Libre';
-    margin-left:0.25em;
+    margin-left:1.75em;
     line-height:1.4;
     transition:color 250ms;
 
     &.-dark { color:map-get($colors, dove-grey); }
     &.-light { color:map-get($colors, concrete); }
+  }
+
+  .webpack-icon {
+    position:absolute;
   }
 
   &:hover .logo-text {
