--- a/styles/_markdown.scss
+++ b/styles/_markdown.scss
@@ -8,7 +8,7 @@
 
   h1, h2, h3, h4, h5, h6 {
     font-weight:400;
-    margin:0.5em 0;
+    margin:1.5em 0 0.5em;
     text-transform: capitalize;
 
     &:first-child { margin-top:0; }
