--- a/styles/_markdown.scss
+++ b/styles/_markdown.scss
@@ -64,7 +64,7 @@
 
   blockquote {
     border-left: 4px solid #dddddd;
-    padding: 1em;
+    padding:0.75em 1em;
     color: #777777;
 
     > :first-child { margin-top: 0; }
@@ -73,14 +73,28 @@
     &.tip,
     &.warning,
     &.todo {
+      border-left:none;
+      color:map-get($colors, mine-shaft);
+
       .tip-icon {
         margin-right:0.5em;
       }
+
+      .tip-title {
+        font-size:0.8em;
+        font-weight:600;
+        margin-bottom:0.5em;
+        text-transform:uppercase;
+      }
+
+      code {
+        background-color:transparentize(map-get($colors, alto), 0.5);
+      }
     }
 
-    &.tip { background-color: #F5FFFB; }
-    &.warning { background-color:transparentize(#f1c40f, 0.75); }
-    &.todo { background-color: #FFF5FB; }
+    &.tip { background-color:transparentize(#1abc9c, 0.8); }
+    &.warning { background-color:transparentize(#f1c40f, 0.8); }
+    &.todo { background-color:transparentize(#e74c3c, 0.8); }
   }
 
   table {
