Breaking Contributors out into a separate component and updating styling

--- a/styles/components/_contributors.scss
+++ b/styles/components/_contributors.scss
@@ -1,13 +1,21 @@
-.contributors-list {
-  .contributor {
-    padding:1em;
+.contributors {
+  &__person {
     display: inline-block;
+    margin-right:1em;
+
+    &:last-of-type {
+      margin-right:0;
+    }
+
     img {
       height: 80px;
+      border-radius:3px;
     }
-    .contributor-name {
+
+    span {
       display: block;
       text-align: center;
+      font-size:0.8em;
     }
   }
 }
