--- a/styles/index.scss
+++ b/styles/index.scss
@@ -30,9 +30,10 @@ a {
   }
 
   &.icon-link {
+    display:inline-block;
     font-size:0.7em;
-    vertical-align:super;
-    margin-left:0.25em;
+    margin-left:0.5em;
+    transform:rotate(-135deg);
   }
 }
 
