Refactoring the Icon (now Cube) and Logo, and updating other components using the old Icon

--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -2,7 +2,7 @@
 
 @import "components/container";
 @import "components/footer";
-@import "components/icon";
+@import "components/cube";
 @import "components/logo";
 @import "components/navigation";
 @import "components/page";
