Updating the Splash component to follow BEM

--- a/styles/_markdown.scss
+++ b/styles/_markdown.scss
@@ -1,5 +1,5 @@
 .page__content,
-.splash-content {
+.splash__content {
   h1 { font-size: getFontSize(4); }
   h2 { font-size: getFontSize(3); }
   h3 { font-size: getFontSize(2); }
