--- a/styles/components/_sidecar.scss
+++ b/styles/components/_sidecar.scss
@@ -4,7 +4,7 @@
   right:0;
   z-index:100;
 
-  &-item {
+  &__link {
     display:inline-block;
     padding:0.75em;
     float:right;
@@ -12,65 +12,63 @@
     color:map-get($colors, alto);
     transition:all 250ms;
 
-    span {
-      display:block;
-      float:left;
-      font-size:getFontSize(-1);
-      width:0;
-      overflow:hidden;
-      text-overflow:ellipsis;
-      white-space:nowrap;
-      transition:width 250ms;
-    }
-
-    i { 
-      display:inline-block;
-      width:16px;
-      vertical-align:middle; 
-    }
-
-    // TODO: clean up hardcoded widths (can't animate to width auto) using flex or something
-
-    &.-github { 
-      background:#444;
-
-      &:hover { 
-        background:#333; 
-
-        span { width:95px; }
-      }
-    }
-
-    &.-gitter { 
-      background:desaturate(#ed1965, 15%);
-
-      &:hover { 
-        background:#ed1965; 
-
-        span { width:125px; }
-      }
-    }
-
-    &.-medium { 
-      background:desaturate(#19aa6e, 15%); 
-
-      &:hover { 
-        background:#19aa6e; 
-
-        span { width:95px; }
-      }
-    }
-
-    &.-so {
-      background:desaturate(#f48024, 15%);
-
-      &:hover {
-        background:#f48024;
-
-        span { width:155px; }
-      }
-    }
-
     &:hover { color:map-get($colors, white); }
-  }  
+  }
+
+  &__label {
+    display:block;
+    float:left;
+    width:0;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+    transition:width 250ms;
+  }
+
+  &__icon { 
+    display:inline-block;
+    width:16px;
+  }
+
+  // TODO: Fix hardcoded widths using flex perhaps, can't animate to width auto
+
+  .sidecar__link--github { 
+    background:#444;
+
+    &:hover { 
+      background:#333; 
+
+      .sidecar__label { width:115px; }
+    }
+  }
+
+  .sidecar__link--gitter { 
+    background:desaturate(#ed1965, 15%);
+
+    &:hover { 
+      background:#ed1965; 
+
+      .sidecar__label { width:85px; }
+    }
+  }
+
+  .sidecar__link--medium { 
+    background:desaturate(#19aa6e, 15%); 
+
+    &:hover { 
+      background:#19aa6e; 
+
+      .sidecar__label { width:115px; }
+    }
+  }
+
+  .sidecar__link--so {
+    background:desaturate(#f48024, 15%);
+
+    &:hover {
+      background:#f48024;
+
+      .sidecar__label { width:125px; }
+    }
+  }
 }
