Taking down and renaming the largest screen size

--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  min-width:map-get($screens, desktop);
+  min-width:map-get($screens, large);
   background: map-get($colors, alto);
 
   &__inner {
