--- a/styles/components/_navigation.scss
+++ b/styles/components/_navigation.scss
@@ -1,5 +1,5 @@
 .navigation {
-  min-width:map-get($screens, desktop);
+  min-width:map-get($screens, large);
   background:map-get($colors, mine-shaft);
   transition:background 250ms;
 
