--- a/styles/components/_page.scss
+++ b/styles/components/_page.scss
@@ -1,21 +1,21 @@
 .page {
   position:relative;
   display:flex;
-  min-height:calc(100vh - 100px);
+  min-height:calc(100vh - 94px);
 
   .sidebar { 
     flex:0 0 25%; 
     max-width:25%;
   }
 
-  &-content { 
+  &__content { 
     flex:0 0 75%; 
     max-width:75%;
     padding:1.5em;
     background:map-get($colors, white);
   }
 
-  &-edit {
+  &__edit {
     position:absolute;
     top:1.5em; 
     right:1.5em;
