--- a/styles/_markdown.scss
+++ b/styles/_markdown.scss
@@ -1,5 +1,5 @@
-.page-content,
-.splash-content {
+.page__content,
+.splash__content {
   h1 { font-size: getFontSize(4); }
   h2 { font-size: getFontSize(3); }
   h3 { font-size: getFontSize(2); }
