--- a/styles/components/_navigation.scss
+++ b/styles/components/_navigation.scss
@@ -1,47 +1,33 @@
 .navigation {
-  min-width:map-get($screens, desktop);
+  min-width:map-get($screens, large);
   background:map-get($colors, mine-shaft);
   transition:background 250ms;
 
-  &-inner {
+  &__inner {
     display:flex;
     padding:0.5em 1.5em;
     box-sizing:border-box;
   }
 
-  &-logo {
+  &__logo {
     flex:0 0 auto;
   }
 
-  &-nav {
+  &__links {
     flex:1 1 auto;
     padding:0.2em 0 0.3em;
     text-align:right;
-
-    &-link {
-      font-size:getFontSize(-2);
-      margin-left:2.5em;
-      text-transform:uppercase;
-      color:map-get($colors, alto);
-
-      &:hover,
-      &.-active { 
-        color:map-get($colors, white); 
-      }
-    }
   }
 
-  &.-splash { 
-    position:absolute; 
-    width:100%;
-    top:0;
-    z-index:5;
-    background: transparent;
+  &__link {
+    font-size:getFontSize(-2);
+    margin-left:2.5em;
+    text-transform:uppercase;
+    color:map-get($colors, alto);
 
-    .navigation-nav-link {
-      color:map-get($colors, dusty-grey);
-
-      &:hover { color:map-get($colors, mine-shaft); }
+    &:hover,
+    &--active { 
+      color:map-get($colors, white); 
     }
   }
 }
